[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "biohub-cell-tracking"
version = "0.1.0"
description = "Detect and track zebrafish cells in 3D space-time"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.9.1",
    "zarr>=3.0.10",
    "scipy",
    "tqdm",
    "tracksdata @ git+https://github.com/royerlab/tracksdata@main",
    "napari",
    "pyqt5",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E712"]

[tool.ruff.format]
docstring-code-format = true